--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,36 +1,3 @@
-/******************************************************************************
-  FONTS
-******************************************************************************/
-@font-face {
-    font-family: 'Source Sans Pro';
-    src: url('/fonts/sourcesanspro-bold.woff2') format('woff2'),
-         url('/fonts/sourcesanspro-bold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Source Serif Pro';
-    src: url('/fonts/SourceSerifPro-Regular.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Source Serif Pro';
-    src: url('/fonts/SourceSerifPro-Bold.otf') format('opentype');
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Source Serif Pro';
-    src: url('/fonts/Heuristica-Italic.woff') format('woff');
-    font-weight: 400;
-    font-style: italic;
-}
-
-
 /*****************************************************************************
   ALL
 ******************************
@@ -66,7 +33,7 @@
 ******************************************************************************/
 html {
     color: #333;
-    font: 26px/1.4 'Source Serif Pro', Georgia, sans-serif;
+    font: 26px/1.4 'Alegreya Sans', sans-serif;
     /*Turn on kerning, standard ligatures, and proportional, oldstyle numerals
       Turn off all other ligatures, tabular, lining numerals, and alternates */
     -webkit-font-feature-settings: 'dlig' 0, 'kern', 'liga', 'lnum' 0, 'onum', 'pnum', 'tnum' 0;
@@ -80,8 +47,11 @@ body {
 
 header {
     position: relative;
-    font-family: 'Source Sans Pro', sans-serif;
     vertical-align: text-top;
+}
+
+.site-title {
+    font-family: 'Oswald', sans-serif;
 }
 
 footer,
@@ -127,16 +97,10 @@ main footer nav a {
     padding-top: 0.4em;
 }
 
-article header {
-    font-family: 'Source Serif Pro', Georgia, sans-serif;
-}
 
-article footer {
-    font-size: 1rem;
-}
 
 p a {
-    border-bottom: solid 1px #196719;
+    border-bottom: solid 1px #006b9f;
     text-decoration: none;
 }
 
@@ -188,7 +152,7 @@ blockquote {
 }
 
 blockquote:before {
-    background-color: #196719;
+    background-color: #006b9f;
     color: white;
     content: open-quote;
     font-family: Georgia, 'Droid Serif', serif;
@@ -399,7 +363,7 @@ td {
 }
 
 th {
-    background-color: #196719;
+    background-color: #006b9f;
     color: #fff;
 }
 
@@ -488,9 +452,9 @@ var,
 code,
 var {
     background-color: rgba(0,107,159,0.04);
-    border: 1px solid #196719;
+    border: 1px solid #006b9f;
     border-radius: 2px;
-    color: #196719;
+    color: #006b9f;
     margin: 0 0.15em;
     padding: 0 0.3em;
 }
@@ -520,7 +484,7 @@ kbd kbd {
 ******************************************************************************/
 hr {
     border: 0;
-    border-top: 1px solid #196719;
+    border-top: 1px solid #006b9f;
     display: block;
     height: 1px;
     padding: 0;
@@ -537,13 +501,13 @@ hr.fleuron::after {
 }
 
 ::-moz-selection {
-    background: #196719;
+    background: #006b9f;
     color: #fff;
     text-shadow: none;
 }
 
 ::selection {
-    background-color: #196719;
+    background-color: #006b9f;
     color: #fff;
     text-shadow: none;
 }
@@ -681,8 +645,7 @@ hr.fleuron::after {
 .footer-container,
 .footer-container a,
 .site-nav li a,
-.site-nav .icon,
-.site-title a {
+.site-nav .icon {
     color: #fff;
 }
 
@@ -704,8 +667,6 @@ hr.fleuron::after {
 }
 
 .header-container {
-    background-color: #196719;
-    color: #fff;
     margin-top: 0;
 }
 
@@ -723,7 +684,7 @@ hr.fleuron::after {
 }
 
 .keywords li {
-    border: 2px solid #196719;
+    border: 2px solid #006b9f;
     border-radius: 15px;
     padding: .15em;
 }
@@ -795,7 +756,8 @@ hr.fleuron::after {
     margin-left: 0.1em;
 }
 
-.site-title {
+.site-title a {
+    color: #006b9f;
     font-size: 1.96rem;
     font-weight: bold;
 }
