Add audio element

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -304,6 +304,10 @@ img {
     width: auto;
 }
 
+audio {
+    width: 100%;
+}
+
 
 
 /******************************************************************************
