--- a/src/css/main.css
+++ b/src/css/main.css
@@ -189,6 +189,10 @@ address {
     font-style: normal;
 }
 
+summary + * {
+    margin-top: 1.4em;
+}
+
 
 
 /******************************************************************************
@@ -316,7 +320,7 @@ img {
 }
 
 audio {
-    width: 100%;
+    width: 90%;
 }
 
 
