--- a/src/css/main.css
+++ b/src/css/main.css
@@ -609,6 +609,10 @@ hr.fleuron::after {
             font-feature-settings: "kern" 1, "liga" 1, "pnum" 1, "tnum" 0, "onum" 1, "lnum" 0, "smcp" 1, "c2sc" 1;
 }
 
+.strikethrough {
+    text-decoration: line-through;
+}
+
 .top-border {
     border-top: 0.2rem solid #333;
 }
